--- a/package.json
+++ b/package.json
@@ -8,26 +8,28 @@
 		"lint": "ESLINT_USE_FLAT_CONFIG=true eslint \"src/**/*\"",
 		"prettier": "prettier --write .",
 		"prettier:ci": "prettier --check .",
-		"build:data": "tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/routes.ts src/content/content.ts",
+		"build:content": "npx tsx generate-data-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
+		"build:data": "tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/detail-pages-routes.ts src/content/detail-pages-content.ts && tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/routes.ts src/content/content.ts",
 		"build:csr": "tsc -b && vite build",
 		"build:ssr": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-		"build": "npm run build:csr && npm run build:data && npm run build:ssr && node generate",
+		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && node generate",
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-router-dom": "6.26.1"
+		"react-router-dom": "6.26.1",
+		"slugify": "1.6.6"
 	},
 	"devDependencies": {
 		"@technologiestiftung/eslint-config": "0.2.0",
 		"@technologiestiftung/eslint-plugin": "0.1.1",
 		"@technologiestiftung/prettier-config": "1.0.0",
-		"@typescript-eslint/eslint-plugin": "7.18.0",
-		"@typescript-eslint/parser": "7.18.0",
 		"@types/node": "22.4.1",
 		"@types/react": "18.3.3",
 		"@types/react-dom": "18.3.0",
+		"@typescript-eslint/eslint-plugin": "7.18.0",
+		"@typescript-eslint/parser": "7.18.0",
 		"@vitejs/plugin-react": "4.3.1",
 		"autoprefixer": "10.4.20",
 		"eslint": "8.57.0",
