--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 	"dependencies": {
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-router-dom": "6.26.1",
-		"slugify": "1.6.6"
+		"react-router-dom": "6.26.1"
 	},
 	"devDependencies": {
 		"@technologiestiftung/eslint-config": "0.2.0",
@@ -39,6 +38,7 @@
 		"globals": "15.9.0",
 		"postcss": "8.4.41",
 		"prettier": "3.3.3",
+		"slugify": "1.6.6",
 		"tailwindcss": "3.4.10",
 		"typescript": "5.3.3",
 		"vite": "5.4.1"
