--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"lint": "ESLINT_USE_FLAT_CONFIG=true eslint \"src/**/*\"",
 		"prettier": "prettier --write .",
 		"prettier:ci": "prettier --check .",
-		"build:content": "npx tsx generate-data-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
+		"build:content": "npx tsx generate-content-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
 		"build:data": "tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/detail-pages-routes.ts src/content/detail-pages-content.ts && tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/routes.ts src/content/content.ts",
 		"build:csr": "tsc -b && vite build",
 		"build:ssr": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && node generate",
+		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && npx tsx generate-html.ts",
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
