--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	"dependencies": {
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-router-dom": "6.26.1"
+		"react-router-dom": "6.26.1",
+		"zustand": "4.5.5"
 	},
 	"devDependencies": {
 		"@technologiestiftung/eslint-config": "0.2.0",
