--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
+		"maplibre-gl": "4.7.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-router-dom": "6.26.1",
