--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
+		"maplibre-gl": "4.7.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
 		"react-router-dom": "6.26.1",
@@ -25,6 +26,7 @@
 		"@technologiestiftung/eslint-config": "0.2.0",
 		"@technologiestiftung/eslint-plugin": "0.1.1",
 		"@technologiestiftung/prettier-config": "1.0.0",
+		"@types/geojson": "7946.0.14",
 		"@types/node": "22.5.4",
 		"@types/react": "18.3.5",
 		"@types/react-dom": "18.3.0",
