feat: add script for translations and translated data
Signed-off-by: Raphael Arce <raphael.arce@ts.berlin>

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
-VITE_MATOMO_URL=https://..
-VITE_MATOMO_SITE_ID=123
+export VITE_MATOMO_URL=https://..
+export VITE_MATOMO_SITE_ID=123
+export OPENAI_API_KEY=123
