--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"devDependencies": {
 		"@technologiestiftung/eslint-config": "0.3.1",
 		"@technologiestiftung/prettier-config": "1.0.0",
+		"@turf/turf": "7.1.0",
 		"@types/geojson": "7946.0.14",
 		"@types/node": "22.7.7",
 		"@types/react": "18.3.11",
