ci: install tsx as dev dependency
Signed-off-by: Raphael Arce <raphael.arce@ts.berlin>

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 		"lint": "ESLINT_USE_FLAT_CONFIG=true eslint \"src/**/*\"",
 		"prettier": "prettier --write .",
 		"prettier:ci": "prettier --check .",
-		"build:translations": "npx tsx generate-translations.ts",
-		"build:content": "npx tsx generate-content-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
+		"build:translations": "tsx generate-translations.ts",
+		"build:content": "tsx generate-content-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
 		"build:data": "tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/detail-pages-routes.ts src/content/detail-pages-content.ts && tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/routes.ts src/content/content.ts",
 		"build:csr": "tsc -b && vite build",
 		"build:ssr": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && npx tsx generate-html.ts",
+		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && tsx generate-html.ts",
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
@@ -44,6 +44,7 @@
 		"prettier": "3.3.3",
 		"slugify": "1.6.6",
 		"tailwindcss": "3.4.14",
+		"tsx": "4.19.1",
 		"typescript": "5.6.3",
 		"vite": "5.4.9"
 	}
