--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 export VITE_MATOMO_URL=https://..
 export VITE_MATOMO_SITE_ID=123
 export OPENAI_API_KEY=123
+export FREE_DB_USERNAME=...
+export FREE_DB_PASSWORD=...
