--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"maplibre-gl": "4.7.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
+		"react-markdown": "9.0.1",
 		"react-router-dom": "6.27.0",
 		"zustand": "5.0.1"
 	},
