--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
+		"exponential-backoff": "3.1.1",
 		"maplibre-gl": "4.7.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
