fix: github action

--- a/.github/workflows/update-data-and-translate.yml
+++ b/.github/workflows/update-data-and-translate.yml
@@ -2,6 +2,8 @@ name: Update data and translate
 
 on:
   workflow_dispatch:  # This allows the workflow to be triggered manually  
+  push:
+    branches: [feat/use-free-db-as-source]
 
 jobs:
   update-data-and-translate:
