--- a/.github/workflows/update-data-and-translate.yml
+++ b/.github/workflows/update-data-and-translate.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   update-data-and-translate:
+    environment: production
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     steps:
