--- a/.github/workflows/update-data-and-translate.yml
+++ b/.github/workflows/update-data-and-translate.yml
@@ -2,8 +2,9 @@ name: Update data and translate
 
 on:
   workflow_dispatch:  # This allows the workflow to be triggered manually  
-  push:
-    branches: [feat/use-free-db-as-source]
+  repository_dispatch:
+    # This action can be triggered via Github API webook (see https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#repository_dispatch)
+    types: [berlinpass-update-data]
 
 jobs:
   update-data-and-translate:
@@ -24,4 +25,5 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: added new data and updated changed data incl. translations"
-          branch: "my-test-branch-123"
+          file_pattern: "data/berlinpass_data.json"
+          branch: "main"
