--- a/.github/workflows/update-data-and-translate.yml
+++ b/.github/workflows/update-data-and-translate.yml
@@ -5,7 +5,9 @@ on:
   repository_dispatch:
     # This action can be triggered via Github API webook (see https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#repository_dispatch)
     types: [berlinpass-update-data]
-
+  push:
+      branches: [feat/use-free-db-as-source]
+      
 jobs:
   update-data-and-translate:
     environment: production
