chore: env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 export VITE_MATOMO_URL=https://..
 export VITE_MATOMO_SITE_ID=123
+
+# For data pre-processing, do NOT expose on client side
 export OPENAI_API_KEY=123
 export FREE_DB_USERNAME=...
 export FREE_DB_PASSWORD=...
+export MAPBOX_ACCESS_TOKEN=...
