--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
 		"lint": "ESLINT_USE_FLAT_CONFIG=true eslint \"src/**/*\"",
 		"prettier": "prettier --write .",
 		"prettier:ci": "prettier --check .",
-		"build:translations": "npx tsx generate-translations.ts",
-		"build:content": "npx tsx generate-content-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
+		"build:update-data-and-translate": "cd data && npx tsx update-data-and-translate.ts && npx prettier --config ../prettier.config.js --write berlinpass_data.json",
+		"build:content": "tsx generate-content-and-routes.ts && npx prettier --config prettier.config.js --write src/content/detail-pages-content.ts src/routes/detail-pages-routes.ts",
 		"build:data": "tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/detail-pages-routes.ts src/content/detail-pages-content.ts && tsc --module es6 --skipLibCheck --outDir dist/assets src/routes/routes.ts src/content/content.ts",
 		"build:csr": "tsc -b && vite build",
 		"build:ssr": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && npx tsx generate-html.ts",
+		"build": "npm run build:content && npm run build:csr && npm run build:data && npm run build:ssr && tsx generate-html.ts",
 		"preview": "npx serve dist"
 	},
 	"dependencies": {
+		"exponential-backoff": "3.1.1",
 		"maplibre-gl": "4.7.1",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
@@ -27,6 +28,7 @@
 	"devDependencies": {
 		"@technologiestiftung/eslint-config": "0.3.1",
 		"@technologiestiftung/prettier-config": "1.0.0",
+		"@turf/turf": "7.1.0",
 		"@types/geojson": "7946.0.14",
 		"@types/node": "22.7.7",
 		"@types/react": "18.3.11",
@@ -44,6 +46,7 @@
 		"prettier": "3.3.3",
 		"slugify": "1.6.6",
 		"tailwindcss": "3.4.14",
+		"tsx": "4.19.1",
 		"typescript": "5.6.3",
 		"vite": "5.4.9"
 	}
