--- a/.env.sample
+++ b/.env.sample
@@ -5,4 +5,5 @@ export VITE_MATOMO_SITE_ID=123
 export OPENAI_API_KEY=123
 export FREE_DB_USERNAME=...
 export FREE_DB_PASSWORD=...
+export FREE_DB_URL=...
 export MAPBOX_ACCESS_TOKEN=...
