refactor: rename project feat: update data
Signed-off-by: Raphael Arce <raphael.arce@ts.berlin>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "berlinpass",
+	"name": "fairgnuegen",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
@@ -9,7 +9,7 @@
 		"lint": "ESLINT_USE_FLAT_CONFIG=true eslint \"app/**/*\"",
 		"prettier": "prettier --write .",
 		"prettier:ci": "prettier --check .",
-		"build:update-data-and-translate": "cd data && tsx --tsconfig ../tsconfig.app.json update-data-and-translate.ts && prettier --config ../prettier.config.js --write berlinpass_data.json",
+		"build:update-data-and-translate": "cd data && tsx --tsconfig ../tsconfig.app.json update-data-and-translate.ts && prettier --config ../prettier.config.js --write fairgnuegen_data.json",
 		"build:content": "tsx --tsconfig ./tsconfig.app.json data/generate-content-and-routes.ts && prettier --config prettier.config.js --write app/content/detail-pages-content.ts react-router.config.ts",
 		"build": "NODE_ENV=production npm run build:content && react-router build",
 		"preview": "serve build/client",
