--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "template-default",
+  "projectName": "fairgnuegen",
   "projectOwner": "technologiestiftung",
   "repoType": "github",
   "repoHost": "https://github.com",
@@ -14,6 +14,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/8709861?v=4",
       "profile": "https://github.com/raphael-arce",
       "contributions": ["code", "maintenance", "infra", "a11y", "doc"]
+    },
+    {
+      "login": "aeschi",
+      "name": "aeschi",
+      "avatar_url": "https://avatars.githubusercontent.com/u/56318362?v=4",
+      "profile": "https://github.com/aeschi",
+      "contributions": ["code", "design", "maintenance", "infra"]
     }
   ],
   "contributorsPerLine": 7,
