--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -21,6 +21,13 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/56318362?v=4",
       "profile": "https://github.com/aeschi",
       "contributions": ["code", "design", "maintenance", "infra"]
+    },
+    {
+      "login": "zainab-tariq",
+      "name": "Zainab Tariq",
+      "avatar_url": "https://avatars.githubusercontent.com/u/15946816?v=4",
+      "profile": "https://github.com/zainab-tariq",
+      "contributions": ["code", "maintenance", "a11y"]
     }
   ],
   "contributorsPerLine": 7,
