--- a/.github/workflows/update-data-and-translate.yml
+++ b/.github/workflows/update-data-and-translate.yml
@@ -12,17 +12,41 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'skip ci')"
     steps:
-      - name: Checkout
+      - name: Checkout code ⬇️
         uses: actions/checkout@v4
-      - name: npm-install
-        run: npm install
+
+      - name: Setup Node.js using .nvmrc ⚙️
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+          cache: npm
+
+      - name: Cache npm dependencies 💾
+        id: cache-npm-deps
+        uses: actions/cache@v4
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies 📦
+        if: steps.cache-npm-deps.outputs.cache-hit != 'true'
+        run: npm ci
+
+      - name: Check Build 🏗️
+        run: npm run build
+
       - name: update-data-and-translate
         run: npm run build:update-data-and-translate
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          FREE_DB_URL: ${{ secrets.FREE_DB_URL }}
           FREE_DB_USERNAME: ${{ secrets.FREE_DB_USERNAME }}
           FREE_DB_PASSWORD: ${{ secrets.FREE_DB_PASSWORD }}
           MAPBOX_ACCESS_TOKEN: ${{ secrets.MAPBOX_ACCESS_TOKEN }}
+
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: added new data and updated changed data incl. translations"
