--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"zustand": "5.0.3"
 	},
 	"devDependencies": {
+		"@babel/core": "7.28.0",
+		"@babel/plugin-transform-unicode-property-regex": "7.27.1",
 		"@playwright/test": "1.50.1",
 		"@react-router/dev": "7.1.5",
 		"@technologiestiftung/eslint-config": "0.3.1",
@@ -38,6 +40,7 @@
 		"@types/react-dom": "19.0.3",
 		"@typescript-eslint/eslint-plugin": "8.24.0",
 		"@typescript-eslint/parser": "8.24.0",
+		"@vitejs/plugin-legacy": "6.1.1",
 		"@vitejs/plugin-react": "4.3.4",
 		"autoprefixer": "10.4.20",
 		"eslint": "9.20.0",
@@ -54,6 +57,7 @@
 		"tsx": "4.19.2",
 		"typescript": "5.7.3",
 		"vite": "6.1.0",
+		"vite-plugin-babel": "1.3.2",
 		"vite-tsconfig-paths": "5.1.4"
 	}
 }
