--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 		"@vitejs/plugin-react": "4.3.4",
 		"autoprefixer": "10.4.20",
 		"eslint": "9.20.0",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import": "2.32.0",
 		"eslint-plugin-react": "7.37.4",
 		"eslint-plugin-react-hooks": "5.1.0",
 		"eslint-plugin-react-refresh": "0.4.19",
