Revert "feat: add CORS and CSP headers to vercel.json for enhanced security"
This reverts commit 88ddc66e34b3700bc5e93fea155358f7e656ea49.

--- a/vercel.json
+++ b/vercel.json
@@ -1,47 +1,3 @@
 {
-	"trailingSlash": true,
-    "headers": [
-      {
-        "source": "/(.*)",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://berlin.de"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, PUT, DELETE, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Content-Type, Authorization"
-          },
-          {
-            "key": "Content-Security-Policy",
-            "value": "default-src 'self'; frame-ancestors 'self'; form-action 'self'; upgrade-insecure-requests;"
-          }
-        ]
-      },
-      {
-        "source": "/(.*)",
-        "headers": [
-          {
-            "key": "Access-Control-Allow-Origin",
-            "value": "https://staging-fairgnuegen.vercel.app"
-          },
-          {
-            "key": "Access-Control-Allow-Methods",
-            "value": "GET, POST, PUT, DELETE, OPTIONS"
-          },
-          {
-            "key": "Access-Control-Allow-Headers",
-            "value": "Content-Type, Authorization"
-          },
-          {
-            "key": "Content-Security-Policy",
-            "value": "default-src 'self'; frame-ancestors 'self'; form-action 'self'; upgrade-insecure-requests;"
-          }
-        ]
-      }
-    ]
+	"trailingSlash": true
 }
